--- a/src/main/webapp/admin/index.html
+++ b/src/main/webapp/admin/index.html
@@ -162,7 +162,7 @@
 </div>
 <div class="copy-right text-center">
     <div class="container">
-        <label id="label" class="navbar-fixed-bottom">Copyright of Meng Li © 2014-2016. All rights reserved.
+        <label id="label" class="navbar-fixed-bottom">Copyright of Meng Li © 2014 - 2017. All rights reserved.
             鄂ICP备15010075号-1</label>
     </div>
 </div>
